# langchain-gigachat

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: check_diff.py
.github/workflows/: _lint.yml  _test.yml  check_diffs.yml
docs/: REFACTORING.md  REFACTORING_CHANGELOG.md  TODO.md  V1_MIGRATION.md
libs/gigachat/: CHANGELOG.md  LICENSE  MIGRATION.md  Makefile  README-ru_RU.md  README.md  pyproject.toml
libs/gigachat/langchain_gigachat/: __init__.py  _client.py
libs/gigachat/langchain_gigachat/chat_models/: __init__.py  base_gigachat.py  gigachat.py
libs/gigachat/langchain_gigachat/docs/: REFACTORING.md
libs/gigachat/langchain_gigachat/embeddings/: __init__.py  gigachat.py
libs/gigachat/langchain_gigachat/output_parsers/: gigachat_functions.py
libs/gigachat/langchain_gigachat/tools/: __init__.py  giga_tool.py  load_prompt.py
libs/gigachat/langchain_gigachat/utils/: __init__.py  function_calling.py  pydantic_generator.py
libs/gigachat/tests/unit_tests/: stubs.py  test_gigachat.py  test_imports.py  test_utils.py
libs/gigachat/tests/unit_tests/chat_models/: test_base_gigachat.py  test_message_conversions.py  test_streaming_chunks.py  test_structured_output.py
libs/gigachat/tests/unit_tests/embeddings/: test_gigachat_embeddings.py
libs/gigachat/tests/unit_tests/tools/: test_giga_tool.py
libs/gigachat/tests/unit_tests/utils/: function_calling.py  test_function_calling.py  test_function_calling_edge_cases.py
