[project]
name = "langchain-gigachat-lc1"
version = "0.4.0b2"
description = "An integration package connecting GigaChat and LangChain"
authors = []
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4"
dependencies = ["langchain-core>=1,<2", "gigachat>=0.2.0b2,<0.3"]

[project.urls]
Repository = "https://github.com/ai-forever/langchain-gigachat"
"Source Code" = "https://github.com/ai-forever/langchain-gigachat/tree/master/libs/gigachat"

[dependency-groups]
dev = [
  "mypy>=1.13.0,<2",
  "pytest>=8.3.3,<9",
  "pytest-cov>=5.0.0,<6",
  "pytest-asyncio>=0.24.0,<1",
  "pytest-mock>=3.14.0,<4",
  "ruff>=0.7.0,<1",
  "pre-commit>=4.0.1,<5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["langchain_gigachat"]

[tool.hatch.build.targets.wheel]
packages = ["langchain_gigachat"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle
  "F",    # pyflakes
  "I",    # isort
  "T201", # print
]

[tool.ruff.format]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5 --cov=langchain_gigachat -vv"
markers = [
  "requires: mark tests as requiring a specific library",
  "compile: mark placeholder test used to compile integration tests without running them",
  "scheduled: mark tests to run in scheduled testing",
]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::langchain_core._api.beta_decorator.LangChainBetaWarning",
]

[tool.coverage.run]
omit = ["tests/*"]
